Fix no-wrap in error popover

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,14 +23,6 @@
     font-variant: small-caps;
 }
 
-.modal-content {
-    background-color: rgb(235, 235, 235);
-}
-
-.modal-header {
-    border-bottom: 1px solid rgb(210, 210, 210);
-}
-
 button:active {
     outline: none;
 }
